added work orders frontend
